--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:id="@+id/layoutMenuPrincipal"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,23 +9,22 @@
     tools:context=".MenuPrincipalActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/encabezadoMenuProfesor"
+        android:id="@+id/encabezadoMenuPrincipal"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:title="@string/textoMenu"
         app:menu="@menu/menu_principal_superior"/>
 
     <fragment
-        android:id="@+id/fragmentos"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:id="@+id/contenedorFragmentos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/encabezadoMenuProfesor"
-        android:layout_above="@id/barraInferior"
+        android:layout_below="@id/encabezadoMenuPrincipal"
+        android:layout_above="@id/barraInferiorMenuProfesor"
         app:navGraph="@navigation/menu_principal_navigation"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/barraInferior"
+        android:id="@+id/barraInferiorMenuProfesor"
         android:layout_width="match_parent"
         android:layout_height="65dp"
         style="?attr/bottomNavigationStyle"
