--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     android:id="@+id/layoutHomeFragment"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,70 +8,76 @@
     tools:context=".HomeFragment"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/botonGestionarPermisos"
-        style="?attr/buttonStyle"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        android:text="@string/textoGestionarPermisos"
-        android:visibility="visible"/>
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/botonTareasAdministrativas"
-        style="?attr/buttonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        android:text="@string/textoTareasAdministrativas"
-        android:visibility="visible"/>
+        <Button
+            android:id="@+id/botonGestionarPermisos"
+            style="?attr/buttonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            android:text="@string/textoGestionarPermisos"
+            android:textSize="18sp"/>
 
-    <Button
-        android:id="@+id/botonNotificarAusencias"
-        style="?attr/buttonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        android:text="@string/textoNotificarAusencias"
-        android:visibility="visible"/>
+        <Button
+            android:id="@+id/botonTareasAdministrativas"
+            style="?attr/buttonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            android:text="@string/textoTareasAdministrativas"
+            android:textSize="18sp"/>
 
-    <Button
-        android:id="@+id/botonFijarTareas"
-        style="?attr/buttonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        android:text="@string/textoFijarTareas"
-        android:visibility="visible"/>
+        <Button
+            android:id="@+id/botonNotificarAusencias"
+            style="?attr/buttonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            android:text="@string/textoNotificarAusencias"
+            android:textSize="18sp"/>
 
-    <Button
-        android:id="@+id/botonAsignarGuardias"
-        style="?attr/buttonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        android:text="@string/textoAsignarGuardias"
-        android:visibility="visible"/>
+        <Button
+            android:id="@+id/botonFijarTareas"
+            style="?attr/buttonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            android:text="@string/textoFijarTareas"
+            android:textSize="18sp"/>
 
-    <Button
-        android:id="@+id/botonElaboracionInformes"
-        style="?attr/buttonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        android:text="@string/textoElaborarInformes"
-        android:visibility="visible"/>
+        <Button
+            android:id="@+id/botonAsignarGuardias"
+            style="?attr/buttonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            android:text="@string/textoAsignarGuardias"
+            android:textSize="18sp"/>
 
-</LinearLayout>
+        <Button
+            android:id="@+id/botonElaboracionInformes"
+            style="?attr/buttonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            android:text="@string/textoElaborarInformes"
+            android:textSize="18sp"/>
+    </LinearLayout>
+
+</RelativeLayout>
