--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.DocentesYGuardias" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#83679B</item>
+        <item name="colorPrimary">@color/cyan_cello</item>
         <item name="colorPrimaryVariant">@color/green_mantis</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
@@ -14,8 +14,10 @@
         <item name="toolbarStyle">@style/TopAppBar.Dark</item>
         <item name="iconTint">@color/black</item>
         <item name="textInputStyle">@style/TextInputs.Dark</item>
+        <item name="android:textViewStyle">@style/TextView.Dark</item>
         <item name="buttonStyle">@style/Buttons.Dark</item>
         <item name="bottomNavigationStyle">@style/BottomNavigation.Dark</item>
+        <item name="floatingActionButtonStyle">@style/FloatingButton.Dark</item>
     </style>
 
     <style name="TopAppBar.Dark" parent="TopAppBar">
@@ -30,6 +32,11 @@
         <item name="android:textColor">@color/blue_mirage</item>
     </style>
 
+    <style name="FloatingButton.Dark" parent="FloatingButton">
+        <item name="android:backgroundTint">@color/green_mantis</item>
+        <item name="android:tint">@color/blue_mirage</item>
+    </style>
+
     <style name="TextInputs.Dark" parent="TextInputs">
         <item name="boxBackgroundMode">outline</item>
         <item name="boxCornerRadiusTopStart">10dp</item>
@@ -40,6 +47,10 @@
         <item name="boxStrokeColor">@color/green_mantis</item>
         <item name="hintTextColor">@color/green_mantis</item>
         <item name="cursorColor">@color/white</item>
+    </style>
+
+    <style name="TextView.Dark" parent="TextView">
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="BottomNavigation.Dark" parent="BottomNavigation">
