--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,8 +13,10 @@
         <item name="android:windowBackground">@color/cyan_danube</item>
         <item name="toolbarStyle">@style/TopAppBar</item>
         <item name="iconTint">@color/white</item>
-        <item name="textInputStyle">@style/TextInputs</item>
         <item name="android:buttonStyle">@style/Buttons</item>
+        <item name="floatingActionButtonStyle">@style/FloatingButton</item>
+        <item name="textInputStyle">@style/TextInputs</item>
+        <item name="android:textViewStyle">@style/TextView</item>
         <item name="bottomNavigationStyle">@style/BottomNavigation</item>
     </style>
 
@@ -30,6 +32,12 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="FloatingButton" parent="Widget.Design.FloatingActionButton">
+        <item name="android:backgroundTint">@color/cyan_azure</item>
+        <item name="android:tint">@color/white</item>
+        <item name="borderWidth">0dp</item>
+    </style>
+
     <style name="TextInputs" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
         <item name="boxBackgroundMode">outline</item>
         <item name="boxCornerRadiusTopStart">10dp</item>
@@ -40,6 +48,10 @@
         <item name="boxStrokeColor">@color/orange_tree_poppy</item>
         <item name="hintTextColor">@color/orange_tree_poppy</item>
         <item name="cursorColor">@color/black</item>
+    </style>
+    
+    <style name="TextView" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="BottomNavigation" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
