--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -18,6 +18,7 @@
         app:navigationIcon="@drawable/arrow_back"/>
 
     <LinearLayout
+        android:id="@+id/layoutDatosPerfil"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/encabezadoPerfil"
@@ -25,6 +26,7 @@
         android:gravity="center|top">
 
         <ImageView
+            android:id="@+id/imagenPerfil"
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:src="@drawable/account_circle"
@@ -32,15 +34,41 @@
             app:tint="@color/white"/>
 
         <TextView
+            android:id="@+id/textoTipoProfesorPerfil"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/textoTipoDeProfesor"/>
 
         <TextView
+            android:id="@+id/textoDNIPerfil"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/textoDNI"
+            android:textSize="35sp"/>
+
+        <TextView
+            android:id="@+id/textoNombrePerfil"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/textoNombre"
+            android:textSize="35sp"/>
+
+        <TextView
+            android:id="@+id/textoCorreoPerfil"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/textoCorreo"
+            android:textSize="35sp"/>
+
+        <TextView
+            android:id="@+id/textoTitulacionPerfil"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/textoTitulacion"
             android:textSize="35sp"/>
 
     </LinearLayout>
@@ -54,5 +82,19 @@
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
         android:src="@drawable/edit"/>
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/botonCambiarContrasena"
+        android:layout_width="wrap_content"
+        android:layout_height="56dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_toLeftOf="@id/botonEditarPerfil"
+        android:text="@string/textoContrasena"
+        app:icon="@drawable/lock"
+        app:shapeAppearanceOverlay="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"/>
 
 </RelativeLayout>
