--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -45,7 +45,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/textoDNI"
-            android:textSize="35sp"/>
+            android:textSize="35sp"
+            android:gravity="center"/>
 
         <TextView
             android:id="@+id/textoNombrePerfil"
@@ -53,7 +54,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/textoNombre"
-            android:textSize="35sp"/>
+            android:textSize="35sp"
+            android:gravity="center"/>
 
         <TextView
             android:id="@+id/textoCorreoPerfil"
@@ -61,7 +63,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/textoCorreo"
-            android:textSize="35sp"/>
+            android:textSize="20sp"
+            android:gravity="center"/>
 
         <TextView
             android:id="@+id/textoTitulacionPerfil"
@@ -69,7 +72,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/textoTitulacion"
-            android:textSize="35sp"/>
+            android:textSize="35sp"
+            android:gravity="center"/>
 
     </LinearLayout>
 
