--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -18,6 +18,7 @@
         <item name="extendedFloatingActionButtonStyle">@style/ExtendedFloatingButton.Dark</item>
         <item name="textInputStyle">@style/TextInputs.Dark</item>
         <item name="android:textViewStyle">@style/TextView.Dark</item>
+        <item name="dropDownListViewStyle">@style/Spinner.Dark</item>
         <item name="bottomNavigationStyle">@style/BottomNavigation.Dark</item>
     </style>
 
@@ -59,6 +60,10 @@
 
     <style name="TextView.Dark" parent="TextView">
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Spinner.Dark" parent="Spinner">
+        <item name="android:background">@color/blue_mirage</item>
     </style>
 
     <style name="BottomNavigation.Dark" parent="BottomNavigation">
