--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,6 +18,7 @@
         <item name="extendedFloatingActionButtonStyle">@style/ExtendedFloatingButton</item>
         <item name="textInputStyle">@style/TextInputs</item>
         <item name="android:textViewStyle">@style/TextView</item>
+        <item name="dropDownListViewStyle">@style/Spinner</item>
         <item name="bottomNavigationStyle">@style/BottomNavigation</item>
     </style>
 
@@ -59,6 +60,10 @@
     
     <style name="TextView" parent="Widget.AppCompat.TextView">
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Spinner" parent="Widget.AppCompat.ListView.DropDown">
+        <item name="android:background">@color/cyan_danube</item>
     </style>
 
     <style name="BottomNavigation" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
