--- a/app/src/main/res/layout/activity_cambiar_contrasena.xml
+++ b/app/src/main/res/layout/activity_cambiar_contrasena.xml
@@ -84,13 +84,16 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/botonRealizadoEditarPerfil"
+        android:id="@+id/botonRealizadoCambiarContrasena"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:src="@drawable/check"
-        app:maxImageSize="30dp"/>
+        app:maxImageSize="30dp" />
 
 </RelativeLayout>
