--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:textSize="40sp"
         android:textStyle="bold"/>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/botonIniciarSesionMain"
         style="?attr/buttonStyle"
         android:layout_width="match_parent"
@@ -39,7 +39,7 @@
         android:text="@string/textoIniciarSesion"
         android:textSize="20sp"/>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/botonRegistrarseMain"
         style="?attr/buttonStyle"
         android:layout_width="match_parent"
