--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,12 +9,13 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/layoutBotonesHomeFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:orientation="vertical">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/botonGestionarPermisos"
             style="?attr/buttonStyle"
             android:layout_width="match_parent"
@@ -24,7 +25,7 @@
             android:text="@string/textoGestionarPermisos"
             android:textSize="18sp"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/botonTareasAdministrativas"
             style="?attr/buttonStyle"
             android:layout_width="match_parent"
@@ -35,7 +36,7 @@
             android:text="@string/textoTareasAdministrativas"
             android:textSize="18sp"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/botonNotificarAusencias"
             style="?attr/buttonStyle"
             android:layout_width="match_parent"
@@ -46,7 +47,7 @@
             android:text="@string/textoNotificarAusencias"
             android:textSize="18sp"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/botonFijarTareas"
             style="?attr/buttonStyle"
             android:layout_width="match_parent"
@@ -57,7 +58,7 @@
             android:text="@string/textoFijarTareas"
             android:textSize="18sp"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/botonAsignarGuardias"
             style="?attr/buttonStyle"
             android:layout_width="match_parent"
@@ -68,7 +69,7 @@
             android:text="@string/textoAsignarGuardias"
             android:textSize="18sp"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/botonElaboracionInformes"
             style="?attr/buttonStyle"
             android:layout_width="match_parent"
