--- a/app/src/main/res/layout/elemento_mensaje_lista.xml
+++ b/app/src/main/res/layout/elemento_mensaje_lista.xml
@@ -30,10 +30,10 @@
             android:textSize="20sp"/>
 
         <TextView
-            android:id="@+id/textoTituloElementoMensaje"
+            android:id="@+id/textoMensajeElementoMensaje"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/textoTitulo"
+            android:text="@string/textoMensaje"
             android:textSize="15sp"/>
 
     </LinearLayout>
