--- a/app/src/main/res/navigation/menu_principal_navigation.xml
+++ b/app/src/main/res/navigation/menu_principal_navigation.xml
@@ -3,22 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/menu_principal_navigation"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/inicioFragment">
 
     <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.example.docentesyguardias.HomeFragment"
-        tools:layout="@layout/fragment_home"/>
+        android:id="@+id/inicioFragment"
+        android:name="com.example.docentesyguardias.InicioFragment"
+        tools:layout="@layout/fragment_inicio"/>
 
     <fragment
-        android:id="@+id/calendarFragment"
-        android:name="com.example.docentesyguardias.CalendarFragment"
-        tools:layout="@layout/fragment_calendar"/>
+        android:id="@+id/calendarioFragment"
+        android:name="com.example.docentesyguardias.CalendarioFragment"
+        tools:layout="@layout/fragment_calendario"/>
 
     <fragment
-        android:id="@+id/notificationsFragment"
-        android:name="com.example.docentesyguardias.NotificationsFragment"
-        tools:layout="@layout/fragment_notifications"/>
+        android:id="@+id/notificacionesFragment"
+        android:name="com.example.docentesyguardias.NotificacionesFragment"
+        tools:layout="@layout/fragment_notificaciones"/>
 
 
 </navigation>
