--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="blue_mirage">#111127</color>
     <color name="green_mantis">#67CD6B</color>
     <color name="cyan_cello">#1C3F60</color>
+    <color name="red">#F44336</color>
 </resources>
