--- a/app/src/main/res/layout/activity_mensajes.xml
+++ b/app/src/main/res/layout/activity_mensajes.xml
@@ -28,8 +28,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:src="@drawable/add"
-        app:maxImageSize="30dp"/>
+        app:maxImageSize="30dp" />
 
 </RelativeLayout>
