--- a/app/src/main/res/layout/fragment_horario.xml
+++ b/app/src/main/res/layout/fragment_horario.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    android:id="@+id/layoutHorarioFragment"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HorarioFragment">
 
     <ImageView
+        android:id="@+id/imagenHorario"
         android:layout_width="wrap_content"
         android:layout_height="300dp"
         android:src="@drawable/horario"
