--- a/app/src/main/res/layout/fragment_notificaciones.xml
+++ b/app/src/main/res/layout/fragment_notificaciones.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-    android:id="@+id/layoutNotificationsFragment"
+    android:id="@+id/layoutNotificacionesFragment"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,7 +9,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ListView
-        android:id="@+id/listaNotifications"
+        android:id="@+id/listaNotificaciones"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
