--- a/app/src/main/res/layout/activity_crear_ausencia.xml
+++ b/app/src/main/res/layout/activity_crear_ausencia.xml
@@ -1,38 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:id="@+id/layoutAsignarGuardia"
+    android:id="@+id/layoutCrearAusencia"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AsignarGuardiaActivity"
-    android:orientation="vertical">
+    tools:context=".CrearAusenciaActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/encabezadoAsignarGuardia"
+        android:id="@+id/encabezadoCrearAusencia"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
         app:navigationIcon="@drawable/arrow_back"
-        app:title="@string/textoAsignarGuardias"/>
+        app:title="@string/textoCrearAusencia"/>
 
     <Spinner
-        android:id="@+id/spinnerProfesorAusenteAsignarGuardia"
+        android:id="@+id/spinnerTipoAusencia"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/encabezadoAsignarGuardia"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"/>
-
-    <Spinner
-        android:id="@+id/spinnerProfesorGuardiaAsignarGuardia"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/spinnerProfesorAusenteAsignarGuardia"
+        android:layout_below="@id/encabezadoCrearAusencia"
         android:layout_marginTop="5dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
@@ -40,16 +28,16 @@
         android:paddingBottom="8dp"/>
 
     <LinearLayout
-        android:id="@+id/layoutFechaHoraInicioAsignarGuardia"
+        android:id="@+id/layoutFechaHoraInicioCrearAusencia"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/spinnerProfesorGuardiaAsignarGuardia"
-        android:layout_marginTop="5dp"
+        android:layout_below="@id/spinnerTipoAusencia"
+        android:layout_marginTop="25dp"
         android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textoFechaHoraInicioAsignarGuardia"
+            android:id="@+id/textoFechaHoraInicioCrearAusencia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
@@ -57,7 +45,7 @@
             android:textSize="18sp"/>
 
         <ImageButton
-            android:id="@+id/botonFechaHoraInicioAsignarGuardia"
+            android:id="@+id/botonFechaHoraInicioCrearAusencia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/calendar"/>
@@ -65,16 +53,16 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/layoutFechaHoraFinAsignarGuardia"
+        android:id="@+id/layoutFechaHoraFinCrearAusencia"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/layoutFechaHoraInicioAsignarGuardia"
-        android:layout_marginTop="5dp"
+        android:layout_below="@id/layoutFechaHoraInicioCrearAusencia"
+        android:layout_marginTop="25dp"
         android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textoFechaHoraFinAsignarGuardia"
+            android:id="@+id/textoFechaHoraFinCrearAusencia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
@@ -82,7 +70,7 @@
             android:textSize="18sp"/>
 
         <ImageButton
-            android:id="@+id/botonFechaHoraFinAsignarGuardia"
+            android:id="@+id/botonFechaHoraFinCrearAusencia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/calendar"/>
@@ -90,7 +78,7 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/botonRealizadoAsignarGuardia"
+        android:id="@+id/botonRealizadoCrearAusencia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
