--- a/app/src/main/res/layout/activity_visualizar_mensaje.xml
+++ b/app/src/main/res/layout/activity_visualizar_mensaje.xml
@@ -16,25 +16,41 @@
         app:title="@string/textoMensaje"/>
 
     <TextView
-        android:id="@+id/textoProfesorEmisor"
+        android:id="@+id/textoProfesorEmisorVisualizar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/textoNombre"/>
+        android:layout_below="@id/encabezadoVisualizarMensaje"
+        android:layout_marginTop="30dp"
+        android:text="@string/textoNombre"
+        android:textAlignment="center"
+        android:textSize="25sp"/>
+
+    <TextView
+        android:id="@+id/textoFechaVisualizarMensaje"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textoProfesorEmisorVisualizar"
+        android:layout_marginTop="10dp"
+        android:text="@string/textoFechaNumero"
+        android:textAlignment="center"
+        android:textSize="20sp"/>
 
     <TextView
         android:id="@+id/textoTituloVisualizarMensaje"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/encabezadoVisualizarMensaje"
+        android:layout_below="@id/textoFechaVisualizarMensaje"
+        android:layout_marginTop="20dp"
         android:text="@string/textoTitulo"
         android:textAlignment="center"
-        android:textSize="30sp"/>
+        android:textSize="40sp"/>
 
     <TextView
         android:id="@+id/textoMensajeVisualizarMensaje"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/textoTituloVisualizarMensaje"
+        android:layout_marginTop="20dp"
         android:text="@string/textoMensaje"
         android:textAlignment="center"
         android:textSize="15sp"/>
