--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -22,6 +22,7 @@
             android:layout_height="150dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
+            android:visibility="gone"
             android:text="@string/textoGenerarPermiso"
             android:textSize="18sp"/>
 
@@ -33,6 +34,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
+            android:visibility="gone"
             android:text="@string/textoAdministrarTareas"
             android:textSize="18sp"/>
 
@@ -44,6 +46,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
+            android:visibility="gone"
             android:text="@string/textoCrearAusencia"
             android:textSize="18sp"/>
 
@@ -55,6 +58,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
+            android:visibility="gone"
             android:text="@string/textoFijarTareas"
             android:textSize="18sp"/>
 
@@ -66,6 +70,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
+            android:visibility="gone"
             android:text="@string/textoAsignarGuardias"
             android:textSize="18sp"/>
 
@@ -77,6 +82,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
+            android:visibility="gone"
             android:text="@string/textoElaborarInforme"
             android:textSize="18sp"/>
     </LinearLayout>
